<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="10sp"
        android:id="@+id/top_bar">

        <TextView
            android:id="@+id/weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weixin"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/mores"
            android:src="@drawable/mores"
            android:layout_width="18sp"
            android:layout_height="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5sp"/>

        <ImageView
            android:id="@+id/search"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:src="@drawable/search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mores"
            android:layout_marginEnd="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/home_search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F3F2"
        android:gravity="center">

        <EditText
            android:background="@drawable/shapesousuo2"
            android:id="@+id/sousuo"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/search"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/sousuo"
            android:textSize="14sp"
            />
    </LinearLayout>
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/contact1"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:background="#ffffff"
                android:layout_marginTop="4dp">
                <ImageView
                    android:layout_width="41dp"
                    android:layout_height="45dp"
                    android:src="@drawable/new_friend"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/xinpengyou"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="11dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:background="#F3F3F2">
            </LinearLayout>
            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/contact2"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="4dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:src="@drawable/group_chat"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/qunliao"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="11dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:background="#F3F3F2">
            </LinearLayout>
            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:id="@+id/contact3"
                android:layout_marginTop="4dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:src="@drawable/label"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/biaoqian"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="11dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:background="#F3F3F2">
            </LinearLayout>
            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:id="@+id/contact4"
                android:layout_marginTop="4dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:src="@drawable/gzh"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gongzhonghao"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="11dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="#F3F3F2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A"
                    android:textSize="18sp"
                    android:layout_marginLeft="26dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contact5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="4dp"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:src="@drawable/avata1"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/haonanren"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:background="#F3F3F2">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="4dp"
                android:id="@+id/contact6"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:src="@drawable/avata2"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/asans"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="#F3F3F2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/B"
                    android:textSize="18sp"
                    android:layout_marginLeft="26dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="4dp"
                android:id="@+id/contact7"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:src="@drawable/avata4"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buliangshaonian"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="4dp"
                android:id="@+id/contact8"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:src="@drawable/avata3"
                    />
                <TextView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buliangshaonian"
                    android:textColor="@color/block"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/section1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/chat" />

            <TextView
                android:id="@+id/text1"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chats" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/contacts2" />


            <TextView
                android:id="@+id/text2"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/selected_color"
                android:text="@string/contacts" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/discovery" />

            <TextView
                android:id="@+id/text3"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discovery" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/text4"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
