<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="10sp"
        android:id="@+id/top_bar">

        <TextView
            android:id="@+id/weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weixin"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/mores"
            android:src="@drawable/mores"
            android:layout_width="18sp"
            android:layout_height="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5sp"/>

        <ImageView
            android:id="@+id/search"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:src="@drawable/search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mores"
            android:layout_marginEnd="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ListView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_below="@id/top_bar"
        android:layout_above="@id/bottom_bar"
        />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/section1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/chat2" />

            <TextView
                android:id="@+id/text1"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/selected_color"
                android:text="@string/chats" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/contacts" />


            <TextView
                android:id="@+id/text2"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/discovery" />

            <TextView
                android:id="@+id/text3"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discovery" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:scaleType="centerInside"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/text4"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />
        </LinearLayout>

    </LinearLayout>




</LinearLayout>
